--- a/startpage/public/index.html
+++ b/startpage/public/index.html
@@ -4,26 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-    <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons"> -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap core CSS -->
-    <!-- <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/mdb.min.css"> -->
-    <title>startpage</title>
+    <!-- <link rel="icon" href="src/assets/nintendo_remote_favicon.png"> -->
+    
+    <title>Startpage</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but startpage doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-      <!-- MDB core JavaScript -->
-      <!-- JQuery
-      <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-      <!-- Bootstrap core JavaScript -->
-      <!-- <script type="text/javascript" src="js/bootstrap.min.js"></script>
-      <script type="text/javascript" src="js/mdb.min.js"></script> -->
+    
   </body>
 </html>
